Função de recuperar localização do cliente
Adicionada a função de recuperar localização do cliente a partir da tela de maps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="descricaoTipoCadastro">Tipo de cadasto:</string>
     <string name="escolhaCadastroPrestador">Prestador</string>
     <string name="title_activity_cliente">ClienteActivity</string>
+    <string name="meu_local">Meu local</string>
+    <string name="digite_seu_destino">Digite ???</string>
+    <string name="chamar_prestador">Chamar Prestador</string>
 </resources>
