Ponto de controle - desenv. da tela de maps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,6 @@
     <string name="escolhaCadastroPrestador">Prestador</string>
     <string name="title_activity_cliente">ClienteActivity</string>
     <string name="meu_local">Meu local</string>
-    <string name="digite_seu_destino">Digite ???</string>
+    <string name="digite_seu_destino">*TESTE* - Encanador</string>
     <string name="chamar_prestador">Chamar Prestador</string>
 </resources>
